Login JWT, lưu refresh token vào db, xử lý exception global